syntax = "proto3";

option go_package = "github.com/dimitarkovachev/golang-at-ocado/proj/sort/gen";

import "types.proto";

service SortingRobot {
  rpc LoadItems(LoadItemsRequest) returns (LoadItemsResponse) {}
  rpc MoveItem(MoveItemRequest) returns (MoveItemResponse) {}
  rpc SelectItem(SelectItemRequest) returns (SelectItemResponse) {}
  rpc RemoveItemsByCode(RemoveItemsRequest) returns (RemoveItemsResponse);
  rpc AuditState(AuditStateRequest) returns (AuditStateResponse);
}

message CubbyToItems {
  types.Cubby cubby = 1;
  repeated types.Item items = 2;
}

message LoadItemsRequest {
    repeated types.Item items = 1;
}

message LoadItemsResponse {}

message MoveItemRequest {
  types.Cubby cubby = 1;
}

message MoveItemResponse {}

message SelectItemRequest {}

message SelectItemResponse {
  types.Item item = 1;
}

message RemoveItemsRequest {
  repeated string itemCodes = 1;
}

message RemoveItemsResponse {}

message AuditStateRequest {}

message AuditStateResponse {
  repeated CubbyToItems cubbiesToItems = 1;
}
